--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>My Repo</title>
 </head>
 <body>
+    <h1>ami aj onek kiso sikteci</h1>
+    <h2>jau jau r lagbo na onek dekci</h2>
+    <h3>ami onek din dhoira coding sikte chaicilam</h3>
     
 </body>
 </html>
