--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>ami aj onek kiso sikteci</h1>
     <h2>jau jau r lagbo na onek dekci</h2>
     <h3>ami onek din dhoira coding sikte chaicilam</h3>
+    <img src="saim.jpg" alt="">
     
 </body>
 </html>
