--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2>jau jau r lagbo na onek dekci</h2>
     <h3>ami onek din dhoira coding sikte chaicilam</h3>
     <img src="saim.jpg" alt="">
+    <img src="photo.jpg" alt="">
     
 </body>
 </html>
